applications/medama/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medama
spec:
  selector:
    app: medama
  ports:
    - port: 8080
      targetPort: 8080
      name: http
